<resources>
    <string name="app_name">GR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ggu_home">HOME</string>
    <string name="ggu_school">금강대학교</string>
    <string name="ggu_notice">공지사항</string>
    <string name="ggu_food">구내식당</string>
    <string name="ggu_delivery">배달메뉴</string>
    <string name="ggu_schoolbus">학교버스</string>
    <string name="ggu_duksung">덕성여객</string>
    <string name="ggu_info">어플정보</string>

    <string name="board_writer">작성자</string>
    <string name="board_regdate">작성일</string>
    <string name="board_hit">조회수</string>
    <string name="board_depart_guide">담당부서안내</string>
    <string name="board_department">부서명</string>
    <string name="board_depart_tel">연락처</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
