<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragNotice.FragNoticeContent">

    <!-- TODO: Update blank fragment layout -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"/>
    <!-- TITLE -->
    <TextView
        android:id="@+id/board_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"/>

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/board_writer"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/board_writer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/board_regdate"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/board_regdate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/board_hit"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@color/colorBlack"/>

            <TextView
                android:id="@+id/board_hit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"/>

    <!-- CONTENT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/board_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"/>

        </ScrollView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"/>

    <!-- DOWNLOAD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/board_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:textColor="@color/colorBlack" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"/>

    <!-- FOOTER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/department"
            android:drawablePadding="10dp"
            android:text="@string/board_depart_guide"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/board_department"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorBlack" />


            <TextView
                android:id="@+id/department"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/board_depart_tel"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/colorBlack"/>


            <TextView
                android:id="@+id/department_tel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/colorGray"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>